--- a/subsys/net/lib/lwm2m/Kconfig
+++ b/subsys/net/lib/lwm2m/Kconfig
@@ -285,6 +285,23 @@ config LWM2M_RW_JSON_SUPPORT
 	help
 	  Include support for writing JSON data
 
+
+config LWM2M_RW_SENML_JSON_SUPPORT
+	bool "support for SENML JSON writer[EXPERIMENTAL]"
+	depends on BASE64
+	select EXPERIMENTAL
+	default n
+	help
+	  Include support for write / parse SENML JSON data
+
+config LWM2M_COMPOSITE_PATH_LIST_SIZE
+	int "Maxinum # of composite read  and send operation url paths"
+	default 6
+	help
+	  Define path list size for Composite Read and and send operation.
+	  Every entry in path list structure will increase stack usage by 13
+	  bytes.
+
 config LWM2M_DEVICE_PWRSRC_MAX
 	int "Maximum # of device power source records"
 	default 5
